working on hopfield

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -117,7 +117,7 @@
     "```\n",
     "In this case we have only one loop instead of three!! \n",
     "\n",
-    "*A general rule: **dot product** is for spreading the activity throughout the network, while **outer product** is for weight update*.\n",
+    "<span style=\"background:#000000; color:#ffffff\">*A general rule: **dot product** is for spreading the activity throughout a network, while **outer product** is for weight update* </span>.\n",
     "\n",
     "### Energy function\n",
     "In each state of the network we can calculate a value that is given by:\n",
