working on hopfield

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -681,7 +681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -812,7 +812,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -820,7 +820,7 @@
    "source": [
     "from IPython.core.display import HTML\n",
     "def css_styling():\n",
-    "    styles = open(\"/custom.css\", \"r\").read()\n",
+    "    styles = open(\"./custom.css\", \"r\").read()\n",
     "    return HTML(styles)\n",
     "css_styling()"
    ]
