--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -683,7 +683,7 @@
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": true
    },
    "outputs": [
     {
