--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -681,138 +681,139 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [
     {
      "data": {
       "text/html": [
+       "<style>\n",
        "/* FONT-SIZE */\n",
        "div.input_area{ font-size:14px; }\n",
        ".CodeMirror { font-size:14px; } \n",
        "div .text_cell_render pre { font-size:14px; line-height: 120% } \n",
        "\n",
-       "/* \n",
-       "* \n",
-       "* ** BACKGROUND **\n",
-       "* div .input_area { background-color:#000000;}\n",
-       "* div .text_cell_render  pre code { background-color:#777777; }\n",
-       "* \n",
-       "* \n",
-       "* ** BACKGROUND_EDIT **\n",
-       "* div .input_area .cm-s-default { background-color: #888888;}\n",
-       "* \n",
-       "* ** CURSOR **\n",
-       "* .CodeMirror div.CodeMirror-cursor { border-left: 5px solid #FFFFFF }\n",
-       "* .CodeMirror div.CodeMirror-secondarycursor { border-left: 5px solid #FFFFFF;}\n",
-       "* .CodeMirror.cm-fat-cursor div.CodeMirror-cursor { background: #FFFFFF;}\n",
-       "* .cm-animate-fat-cursor { background-color: #FFFFFF; }\n",
-       "* \n",
-       "* \n",
-       "* \n",
-       "* ** FONT-SIZE_EDIT **\n",
-       "* div .input_area .cm-s-default { font-size: 18px;}\n",
-       "* \n",
-       "* ** BASH-COMMAND **\n",
-       "* div.input_area>div.highlight>pre{ color: #FFFFFF; }\n",
-       "* \n",
-       "* ** BUILTIN **\n",
-       "* .cm-s-ipython span.cm-builtin { color: #CD5C5C } \n",
-       "* .cm-s-ipython span.cm-variable-2 { color: #CD5C5C } \n",
-       "* .cm-s-ipython span.cm-variable-3 { color:#CD5C5C } \n",
-       "* .highlight .bp { color: #CD5C5C } ** Name.Builtin.Pseudo **\n",
-       "* \n",
-       "* ** KEYWORD **\n",
-       "* .cm-s-ipython span.cm-keyword { color: #F0E68C; font-weight:700 } \n",
-       "* .highlight .k { color: #F0E68C; font-weight: bold } ** Keyword **\n",
-       "* .highlight .kc { color: #F0E68C; font-weight: bold } ** Keyword.Constant **\n",
-       "* .highlight .kd { color: #F0E68C; font-weight: bold } ** Keyword.Declaration **\n",
-       "* .highlight .kn { color: #F0E68C; font-weight: bold } ** Keyword.Namespace **\n",
-       "* .highlight .kp { color: #F0E68C; font-weight: bold } ** Keyword.Pseudo **\n",
-       "* .highlight .kr { color: #F0E68C; font-weight: bold } ** Keyword.Reserved **\n",
-       "* .highlight .kt { color: #F0E68C; font-weight: bold } ** Keyword.Type **\n",
-       "* .highlight .ow { color: #F0E68C; font-weight: bold } ** Operator.Word **\n",
-       "* \n",
-       "* ** VARIABLE **\n",
-       "* .cm-s-ipython span.cm-variable { color: #FFFFFF } \n",
-       "* .cm-s-ipython span.cm-def { color: #FFFFFF } \n",
-       "* .highlight .n { color: #FFFFFF } ** Name.Variable **\n",
-       "* .highlight .nv { color: #FFFFFF } ** Name.Variable **\n",
-       "* .highlight .na { color: #FFFFFF } ** Name.Attribute **\n",
-       "* .highlight .no { color: #FFFFFF } ** Name.Constant **\n",
-       "* .highlight .nl { color: #FFFFFF } ** Name.Label **\n",
-       "* \n",
-       "* .** FUNCTION **\n",
-       "* .highlight .nb { color: #BDB76B } ** Name.Builtin **\n",
-       "* .highlight .nf { color: #BDB76B } ** Name.Function **\n",
-       "* .highlight .vc { color: #BDB76B } ** Name.Variable.Class **\n",
-       "* .highlight .vg { color: #BDB76B } ** Name.Variable.Global **\n",
-       "* .highlight .vi { color: #BDB76B } ** Name.Variable.Instance **\n",
-       "* .highlight .nc { color: #BDB76B } ** Name.Class **\n",
-       "* .highlight .ni { color: #BDB76B } ** Name.Entity **\n",
-       "* .highlight .ne { color: #BDB76B } ** Name.Exception **\n",
-       "* .highlight .nn { color: #BDB76B } ** Name.Namespace **\n",
-       "* .highlight .nt { color: #BDB76B } ** Name.Tag **\n",
-       "* \n",
-       "* \n",
-       "* ** OPERATOR **\n",
-       "* .cm-s-ipython span.cm-operator { color: #FFFFFF; font-weight:700 } \n",
-       "* .cm-s-ipython span { color: #FFFFFF; font-weight:700 } \n",
-       "* .highlight .o { color: #FFFFFF; font-weight:bold } ** Operator **\n",
-       "* .highlight .p { color: #FFFFFF; font-weight:bold } ** Operator **\n",
-       "* \n",
-       "* \n",
-       "* ** DECORATOR **\n",
-       "* .cm-s-ipython span.cm-meta { color: #BDB76B } \n",
-       "* .highlight .nd { color: #BDB76B } ** Name.Decorator **\n",
-       "* \n",
-       "* \n",
-       "* ** COMMENT **\n",
-       "* .cm-s-ipython span.cm-comment { color:#87CEEB; font-style:italic } \n",
-       "* .highlight .c { color: #87CEEB; font-style: italic } ** Comment **\n",
-       "* .highlight .cm { color: #87CEEB; font-style: italic } ** Comment.Multiline **\n",
-       "* .highlight .cp { color: #87CEEB } ** Comment.Preproc **\n",
-       "* .highlight .c1 { color: #87CEEB; font-style: italic } ** Comment.Single **\n",
-       "* .highlight .cs { color: #87CEEB; font-style: italic } ** Comment.Special **\n",
-       "* \n",
-       "* \n",
-       "* ** NUMBER **\n",
-       "* .cm-s-ipython span.cm-number { color: #98FB98 } \n",
-       "* .highlight .mb { color: #98FB98 } ** Literal.Number.Bin **\n",
-       "* .highlight .mf { color: #98FB98 } ** Literal.Number.Float **\n",
-       "* .highlight .mh { color: #98FB98 } ** Literal.Number.Hex **\n",
-       "* .highlight .mi { color: #98FB98 } ** Literal.Number.Integer **\n",
-       "* .highlight .mo { color: #98FB98 } ** Literal.Number.Oct **\n",
-       "* .highlight .m { color: #98FB98 } ** Literal.Number **\n",
-       "* .highlight .il { color: #98FB98 } ** Literal.Number.Integer.Long **\n",
-       "* \n",
-       "* ** STRING **\n",
-       "* .cm-s-ipython span.cm-string { color: #FFA0A0 } \n",
-       "* .cm-s-ipython span.cm-string-2 { color: #FFA0A0 } \n",
-       "* .highlight .s { color: #FFA0A0 } ** Literal.String **\n",
-       "* .highlight .w { color: #FFA0A0 } ** Text.Whitespace **\n",
-       "* .highlight .sb { color: #FFA0A0 } ** Literal.String.Backtick **\n",
-       "* .highlight .sc { color: #FFA0A0 } ** Literal.String.Char **\n",
-       "* .highlight .sd { color: #FFA0A0; font-style: italic } ** Literal.String.Doc **\n",
-       "* .highlight .s2 { color: #FFA0A0 } ** Literal.String.Double **\n",
-       "* .highlight .se { color: #FFA0A0; font-weight: bold } ** Literal.String.Escape **\n",
-       "* .highlight .sh { color: #FFA0A0 } ** Literal.String.Heredoc **\n",
-       "* .highlight .si { color: #FFA0A0; font-weight: bold } ** Literal.String.Interpol **\n",
-       "* .highlight .sx { color: #FFA0A0 } ** Literal.String.Other **\n",
-       "* .highlight .sr { color: #FFA0A0 } ** Literal.String.Regex **\n",
-       "* .highlight .s1 { color: #FFA0A0 } ** Literal.String.Single **\n",
-       "* .highlight .ss { color: #FFA0A0 } ** Literal.String.Symbol **\n",
-       "* \n",
-       "* \n",
-       "*/\n"
+       " \n",
+       " \n",
+       " /* BACKGROUND */\n",
+       " div .input_area { background-color:#000000;}\n",
+       " div .text_cell_render  pre code { background-color:#777777; }\n",
+       " \n",
+       " \n",
+       " /* BACKGROUND_EDIT */\n",
+       " div .input_area .cm-s-default { background-color: #888888;}\n",
+       " \n",
+       " /* CURSOR */\n",
+       " .CodeMirror div.CodeMirror-cursor { border-left: 5px solid #FFFFFF }\n",
+       " .CodeMirror div.CodeMirror-secondarycursor { border-left: 5px solid #FFFFFF;}\n",
+       " .CodeMirror.cm-fat-cursor div.CodeMirror-cursor { background: #FFFFFF;}\n",
+       " .cm-animate-fat-cursor { background-color: #FFFFFF; }\n",
+       " \n",
+       " \n",
+       " \n",
+       " /* FONT-SIZE_EDIT */\n",
+       " div .input_area .cm-s-default { font-size: 18px;}\n",
+       " \n",
+       " /* BASH-COMMAND */\n",
+       " div.input_area>div.highlight>pre{ color: #FFFFFF; }\n",
+       " \n",
+       " /* BUILTIN */\n",
+       " .cm-s-ipython span.cm-builtin { color: #CD5C5C } \n",
+       " .cm-s-ipython span.cm-variable-2 { color: #CD5C5C } \n",
+       " .cm-s-ipython span.cm-variable-3 { color:#CD5C5C } \n",
+       " .highlight .bp { color: #CD5C5C } /* Name.Builtin.Pseudo */\n",
+       " \n",
+       " /* KEYWORD */\n",
+       " .cm-s-ipython span.cm-keyword { color: #F0E68C; font-weight:700 } \n",
+       " .highlight .k { color: #F0E68C; font-weight: bold } /* Keyword */\n",
+       " .highlight .kc { color: #F0E68C; font-weight: bold } /* Keyword.Constant */\n",
+       " .highlight .kd { color: #F0E68C; font-weight: bold } /* Keyword.Declaration */\n",
+       " .highlight .kn { color: #F0E68C; font-weight: bold } /* Keyword.Namespace */\n",
+       " .highlight .kp { color: #F0E68C; font-weight: bold } /* Keyword.Pseudo */\n",
+       " .highlight .kr { color: #F0E68C; font-weight: bold } /* Keyword.Reserved */\n",
+       " .highlight .kt { color: #F0E68C; font-weight: bold } /* Keyword.Type */\n",
+       " .highlight .ow { color: #F0E68C; font-weight: bold } /* Operator.Word */\n",
+       " \n",
+       " /* VARIABLE */\n",
+       " .cm-s-ipython span.cm-variable { color: #FFFFFF } \n",
+       " .cm-s-ipython span.cm-def { color: #FFFFFF } \n",
+       " .highlight .n { color: #FFFFFF } /* Name.Variable */\n",
+       " .highlight .nv { color: #FFFFFF } /* Name.Variable */\n",
+       " .highlight .na { color: #FFFFFF } /* Name.Attribute */\n",
+       " .highlight .no { color: #FFFFFF } /* Name.Constant */\n",
+       " .highlight .nl { color: #FFFFFF } /* Name.Label */\n",
+       " \n",
+       " ./* FUNCTION */\n",
+       " .highlight .nb { color: #BDB76B } /* Name.Builtin */\n",
+       " .highlight .nf { color: #BDB76B } /* Name.Function */\n",
+       " .highlight .vc { color: #BDB76B } /* Name.Variable.Class */\n",
+       " .highlight .vg { color: #BDB76B } /* Name.Variable.Global */\n",
+       " .highlight .vi { color: #BDB76B } /* Name.Variable.Instance */\n",
+       " .highlight .nc { color: #BDB76B } /* Name.Class */\n",
+       " .highlight .ni { color: #BDB76B } /* Name.Entity */\n",
+       " .highlight .ne { color: #BDB76B } /* Name.Exception */\n",
+       " .highlight .nn { color: #BDB76B } /* Name.Namespace */\n",
+       " .highlight .nt { color: #BDB76B } /* Name.Tag */\n",
+       " \n",
+       " \n",
+       " /* OPERATOR */\n",
+       " .cm-s-ipython span.cm-operator { color: #FFFFFF; font-weight:700 } \n",
+       " .cm-s-ipython span { color: #FFFFFF; font-weight:700 } \n",
+       " .highlight .o { color: #FFFFFF; font-weight:bold } /* Operator */\n",
+       " .highlight .p { color: #FFFFFF; font-weight:bold } /* Operator */\n",
+       " \n",
+       " \n",
+       " /* DECORATOR */\n",
+       " .cm-s-ipython span.cm-meta { color: #BDB76B } \n",
+       " .highlight .nd { color: #BDB76B } /* Name.Decorator */\n",
+       " \n",
+       " \n",
+       " /* COMMENT */\n",
+       " .cm-s-ipython span.cm-comment { color:#87CEEB; font-style:italic } \n",
+       " .highlight .c { color: #87CEEB; font-style: italic } /* Comment */\n",
+       " .highlight .cm { color: #87CEEB; font-style: italic } /* Comment.Multiline */\n",
+       " .highlight .cp { color: #87CEEB } /* Comment.Preproc */\n",
+       " .highlight .c1 { color: #87CEEB; font-style: italic } /* Comment.Single */\n",
+       " .highlight .cs { color: #87CEEB; font-style: italic } /* Comment.Special */\n",
+       " \n",
+       " \n",
+       " /* NUMBER */\n",
+       " .cm-s-ipython span.cm-number { color: #98FB98 } \n",
+       " .highlight .mb { color: #98FB98 } /* Literal.Number.Bin */\n",
+       " .highlight .mf { color: #98FB98 } /* Literal.Number.Float */\n",
+       " .highlight .mh { color: #98FB98 } /* Literal.Number.Hex */\n",
+       " .highlight .mi { color: #98FB98 } /* Literal.Number.Integer */\n",
+       " .highlight .mo { color: #98FB98 } /* Literal.Number.Oct */\n",
+       " .highlight .m { color: #98FB98 } /* Literal.Number */\n",
+       " .highlight .il { color: #98FB98 } /* Literal.Number.Integer.Long */\n",
+       " \n",
+       " /* STRING */\n",
+       " .cm-s-ipython span.cm-string { color: #FFA0A0 } \n",
+       " .cm-s-ipython span.cm-string-2 { color: #FFA0A0 } \n",
+       " .highlight .s { color: #FFA0A0 } /* Literal.String */\n",
+       " .highlight .w { color: #FFA0A0 } /* Text.Whitespace */\n",
+       " .highlight .sb { color: #FFA0A0 } /* Literal.String.Backtick */\n",
+       " .highlight .sc { color: #FFA0A0 } /* Literal.String.Char */\n",
+       " .highlight .sd { color: #FFA0A0; font-style: italic } /* Literal.String.Doc */\n",
+       " .highlight .s2 { color: #FFA0A0 } /* Literal.String.Double */\n",
+       " .highlight .se { color: #FFA0A0; font-weight: bold } /* Literal.String.Escape */\n",
+       " .highlight .sh { color: #FFA0A0 } /* Literal.String.Heredoc */\n",
+       " .highlight .si { color: #FFA0A0; font-weight: bold } /* Literal.String.Interpol */\n",
+       " .highlight .sx { color: #FFA0A0 } /* Literal.String.Other */\n",
+       " .highlight .sr { color: #FFA0A0 } /* Literal.String.Regex */\n",
+       " .highlight .s1 { color: #FFA0A0 } /* Literal.String.Single */\n",
+       " .highlight .ss { color: #FFA0A0 } /* Literal.String.Symbol */\n",
+       "</style> \n",
+       " \n",
+       "\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
