working on hopfield

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -412,8 +412,7 @@
     "collapsed": false,
     "run_control": {
      "marked": false
-    },
-    "scrolled": false
+    }
    },
    "outputs": [
     {
@@ -681,7 +680,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -693,17 +692,16 @@
        "/* FONT-SIZE */\n",
        "div.input_area{ font-size:14px; }\n",
        ".CodeMirror { font-size:14px; } \n",
-       "div .text_cell_render pre { font-size:14px; line-height: 120% } \n",
+       "div .text_cell_render { font-size:28px;  } \n",
+       "div .text_cell_render pre { font-size:16px; line-height: 120% } \n",
        "\n",
        " \n",
        " \n",
        " /* BACKGROUND */\n",
-       " div .input_area { background-color:#000000;}\n",
-       " div .text_cell_render  pre code { background-color:#777777; }\n",
-       " \n",
+       " div .input_area { background-color:#000000;} \n",
        " \n",
        " /* BACKGROUND_EDIT */\n",
-       " div .input_area .cm-s-default { background-color: #888888;}\n",
+       " div .input_area .cm-s-default { background-color: #888888;}*/\n",
        " \n",
        " /* CURSOR */\n",
        " .CodeMirror div.CodeMirror-cursor { border-left: 5px solid #FFFFFF }\n",
@@ -813,7 +811,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 34,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -821,14 +819,13 @@
    "source": [
     "from IPython.core.display import HTML\n",
     "def css_styling():\n",
-    "    styles = open(\"./custom.css\", \"r\").read()\n",
+    "    styles = open(\"../style/custom.css\", \"r\").read()\n",
     "    return HTML(styles)\n",
     "css_styling()"
    ]
   }
  ],
  "metadata": {
-  "celltoolbar": "Edit Metadata",
   "css": [
    ""
   ],
