--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -711,10 +711,10 @@
        ".input_area pre { font-size:12px; line-height:120% }\n",
        "\n",
        "/* FONT_TEXT */\n",
-       "div.text_cell_render { font-family: Verdana; text-align: justify; font-size:22px;  line-height:120% }\n",
+       "div.text_cell_render, div.text_cell_render span { text-align: justify; font-size:22px;  line-height:120% }\n",
        "\n",
        "/* FONT_QUOTE */\n",
-       ".text_cell_render pre { font-size:16px; line-height:120% }\n",
+       "div.text_cell_render pre { font-size:16px; line-height:120% }\n",
        "\n",
        "/* BACKGROUND */\n",
        "div .input_area { background-color:#000000;}\n",
@@ -845,7 +845,21 @@
        ".input_area .cm-s-ipython span.cm-string-2 { color: #FFA0A0 } \n",
        "\n",
        "</style>\n",
-       "<script src=\"https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML\"></script>\n"
+       "<script type=\"text/x-mathjax-config\">\n",
+       "  MathJax.Hub.Config({\n",
+       "    extensions: [\"tex2jax.js\"],\n",
+       "    jax: [\"input/TeX\", \"output/SVG\"],\n",
+       "    tex2jax: {\n",
+       "      inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
+       "      displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ],\n",
+       "      processEscapes: true\n",
+       "    },\n",
+       "    \"SVG\": { availableFonts: [\"TeX\"] }\n",
+       "  });\n",
+       "</script>\n",
+       "<script src=\"https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML\"></script>\n",
+       "<script type=\"text/javascript\" src=\"path-to-MathJax/MathJax.js\">\n",
+       "</script>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
