working on hopfield

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -424,7 +424,7 @@
     "run_control": {
      "marked": false
     },
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
@@ -692,7 +692,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -711,10 +711,10 @@
        ".input_area pre { font-size:12px; line-height:120% }\n",
        "\n",
        "/* FONT_TEXT */\n",
-       "div.text_cell_render, div.text_cell_render span { text-align: justify; font-size:22px;  line-height:120% }\n",
+       "div.text_cell_render { font-size:18px;  line-height:120% }\n",
        "\n",
        "/* FONT_QUOTE */\n",
-       "div.text_cell_render pre { font-size:16px; line-height:120% }\n",
+       ".text_cell_render pre { font-size:16px; line-height:120% }\n",
        "\n",
        "/* BACKGROUND */\n",
        "div .input_area { background-color:#000000;}\n",
@@ -803,7 +803,7 @@
        "/* JUPYTER */\n",
        "\n",
        "/* FONT_EDIT */\n",
-       ".cm-s-default span { font-size:22px; line-height:120% }\n",
+       ".cm-s-default span { font-size:20px; line-height:120% }\n",
        "\n",
        "/* BACKGROUND_EDIT */\n",
        "div .cm-s-default { background-color: #888888;}\n",
@@ -844,28 +844,13 @@
        ".input_area .cm-s-ipython span.cm-string { color: #FFA0A0 } \n",
        ".input_area .cm-s-ipython span.cm-string-2 { color: #FFA0A0 } \n",
        "\n",
-       "</style>\n",
-       "<script type=\"text/x-mathjax-config\">\n",
-       "  MathJax.Hub.Config({\n",
-       "    extensions: [\"tex2jax.js\"],\n",
-       "    jax: [\"input/TeX\", \"output/SVG\"],\n",
-       "    tex2jax: {\n",
-       "      inlineMath: [ ['$','$'], [\"\\\\(\",\"\\\\)\"] ],\n",
-       "      displayMath: [ ['$$','$$'], [\"\\\\[\",\"\\\\]\"] ],\n",
-       "      processEscapes: true\n",
-       "    },\n",
-       "    \"SVG\": { availableFonts: [\"TeX\"] }\n",
-       "  });\n",
-       "</script>\n",
-       "<script src=\"https://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS_HTML\"></script>\n",
-       "<script type=\"text/javascript\" src=\"path-to-MathJax/MathJax.js\">\n",
-       "</script>\n"
+       "</style>\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
