working on hopfield

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -98,10 +98,14 @@
     "In python we can write:\n",
     "```python\n",
     "w = zeros([n,n])\n",
-    "for p in P:    # P is an array of p vectors\n",
-    "    for i in xrange(np):    # np = len(p)\n",
+    "# P is an array \n",
+    "# of p vectors \n",
+    "for p in P:    \n",
+    "    # np = len(p)\n",
+    "    for i in xrange(np):  \n",
     "        for j in xrange(np):\n",
-    "            # autoconnections are forbidden \n",
+    "            # autoconnections \n",
+    "            #are forbidden \n",
     "            # in Hopfield nets\n",
     "            if i != j :     \n",
     "                w[i,j] += (1/float(np))*p[i]*p[j]\n",
@@ -161,7 +165,7 @@
    "outputs": [],
    "source": [
     "%matplotlib inline\n",
-    "from pylab import *"
+    "pylab import *"
    ]
   },
   {
@@ -692,7 +696,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -850,7 +854,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +887,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.9"
+   "version": "2.7.6"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
