working on hopfield

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -227,7 +227,7 @@
    },
    "outputs": [],
    "source": [
-    "# transorm a raw input in an image matrix  \n",
+    "# transform a raw input in an image matrix  \n",
     "# x:      array    the raw input vector\n",
     "# return  array    a squared matrix\n",
     "def to_mat(x) :\n",
