working on hopfield

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -177,67 +177,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  Utility functions\n",
-    "We prepare some utility functions:"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "This will be our main **plotting** utility:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 69,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# set the maximum number of plots to be printed in a row\n",
-    "windows = 8\n",
-    "\n",
-    "# a custom plot that uses imshow to draw a matrix\n",
-    "# x:        array           the matrix to be plotted\n",
-    "# fig:      figure object   figure device to use\n",
-    "# window:   int             the current subplot position\n",
-    "# windows   int             number of subplot\n",
-    "def plot_img(x, fig, window, windows = windows) :\n",
-    "    ax = fig.add_subplot(1, windows, window)\n",
-    "    ax.imshow(x, interpolation = 'none', \n",
-    "              aspect = 'auto', cmap=cm.Greys)  \n",
-    "    axis('off')\n",
-    "    fig.canvas.draw()"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will use this to convert raw vectors taken from the dataset into matrices to be plotted as images:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 70,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# transform a raw input in an image matrix  \n",
-    "# x:      array    the raw input vector\n",
-    "# return  array    a squared matrix\n",
-    "def to_mat(x) :\n",
-    "    return x.reshape( img_side, img_side )"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "#### Init the dataset\n",
     "First we initialize the dataset:"
    ]
@@ -263,20 +202,7 @@
     "\n",
     "# initialize the dataset variables\n",
     "\n",
-    "# the mnist class\n",
-    "from mnist import MNIST\n",
-    "# initializing with our data dir\n",
-    "mndata = MNIST('./data')   \n",
-    "# we only need the training set\n",
-    "mndata.load_training()\n",
-    "\n",
-    "# set the side lenght of images\n",
-    "img_side = 28   \n",
-    "\n",
-    "# each input is a raw vector.\n",
-    "# the number of units of the network \n",
-    "# corresponds to the number of input elements\n",
-    "n = img_side*img_side "
+    "%run utils"
    ]
   },
   {
