working on feedforward

--- a/course/mnist.ipynb
+++ b/course/mnist.ipynb
@@ -33,7 +33,8 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "display": "none"
    },
    "outputs": [],
    "source": [
@@ -191,12 +192,12 @@
    "metadata": {},
    "source": [
     "<br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br><br>\n",
-    "The next cell is just for styling"
+    "Next cell is just for styling"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false
    },
@@ -352,7 +353,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
