working on feedforward

--- a/course/mnist.ipynb
+++ b/course/mnist.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -207,16 +207,43 @@
       "text/html": [
        "<style>\n",
        "\n",
+       "div#notebook{\n",
+       "    margin-top:50px;\n",
+       "    margin-bottom:100px;\n",
+       "}\n",
+       "div.cell{\n",
+       "    max-width:60em;\n",
+       "    margin-left:auto;\n",
+       "    margin-right:auto;\n",
+       "}\n",
+       "div.input_prompt, div.output_prompt{\n",
+       "    margin-left:-11ex;\n",
+       "}\n",
+       "div.input, div.output_wrapper{\n",
+       "    margin-top:1em;\n",
+       "    margin-bottom:1em;\n",
+       "}\n",
+       "div.text_cell{\n",
+       "    margin-top:-2px;\n",
+       "    margin-bottom:-2px;\n",
+       "    padding-top:2px;\n",
+       "    padding-bottom:2px;\n",
+       "    border-left:2px solid #505050;\n",
+       "    border-collapse:collapse;\n",
+       "    border-top:none;\n",
+       "    border-bottom:none;\n",
+       "}\n",
+       "\n",
        "/* PRINT */\n",
        "\n",
        "/* FONT_CODE */\n",
-       "div.input_area pre { font-size:12px; line-height:120% }\n",
+       "div.input_area pre { font-size:12px }\n",
        "\n",
        "/* FONT_TEXT */\n",
-       "div.text_cell_render { font-size:18px;  line-height:120% }\n",
+       "div.text_cell_render { font-size:18px }\n",
        "\n",
        "/* FONT_QUOTE */\n",
-       "div.text_cell_render pre { font-size:16px; line-height:120% }\n",
+       "div.text_cell_render pre { font-size:16px }\n",
        "\n",
        "/* BACKGROUND */\n",
        "div.input_area { background-color:#000000;}\n",
@@ -306,7 +333,7 @@
        "/* JUPYTER */\n",
        "\n",
        "/* FONT_EDIT */\n",
-       "div.cm-s-default  { font-size:20px; line-height:120% }\n",
+       "div.cm-s-default  { font-size:20px }\n",
        "\n",
        "/* BACKGROUND_EDIT */\n",
        "div.cm-s-default { background-color: #888888;}\n",
@@ -353,7 +380,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
