working on feedforward

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -629,7 +629,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -642,15 +642,16 @@
       "text/html": [
        "<style>\n",
        "/* PRINT */\n",
+       "div span.math { padding: 40px }\n",
        "\n",
        "/* FONT_CODE */\n",
-       ".input_area pre { font-size:12px; line-height:120% }\n",
+       ".input_area pre { font-size:12px; }\n",
        "\n",
        "/* FONT_TEXT */\n",
-       "div.text_cell_render { font-size:28px;  line-height:120%; text-align: left }\n",
+       "div.text_cell_render { font-size:28px; text-align: left }\n",
        "\n",
        "/* FONT_QUOTE */\n",
-       "div.text_cell_render pre { font-size:14px; line-height:120% }\n",
+       "div.text_cell_render pre { font-size:14px; }\n",
        "\n",
        "/* BACKGROUND */\n",
        "div .input_area { background-color:#333333;}\n",
@@ -787,7 +788,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
