working on feedforward

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -3,7 +3,10 @@
   {
    "cell_type": "markdown",
    "metadata": {
-    "code_folding": []
+    "code_folding": [],
+    "run_control": {
+     "marked": false
+    }
    },
    "source": [
     "# The Hopfield network"
@@ -11,14 +14,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "source": [
     "A Hopfield network is a form of recurrent artificial neural network popularized by John Hopfield in [1982](http://www.ncbi.nlm.nih.gov/pubmed/6953413).  Hopfield nets are autoassociative networks, which means that patterns of their own activity are stored in the network inner weights by associating the concurrent  activations of the network units in a hebbian way. Such a network can retrieve a piece of data from only a tiny sample of itself, because the activated units trigger all the others that are associated with them."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "source": [
     "figure 1: an abstract example showing the functioning of an autoassociative network. On the left the network weights after learning. On the center, we trigger only one unit. On the right, all the associated units become activated.\n",
     "\n",
@@ -27,7 +38,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "source": [
     "### Spreading\n",
     "\n",
@@ -149,7 +164,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "source": [
     "## Implementing a simulation"
    ]
@@ -158,7 +177,10 @@
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "marked": false
+    }
    },
    "outputs": [],
    "source": [
@@ -168,14 +190,22 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "source": [
     "Let us implement a simulation using images from [the MNIST dataset](http://nbviewer.ipython.org/github/francesco-mannella/neunet-basics/blob/master/course/mnist.ipynb) as patterns."
    ]
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "source": [
     "#### Init the dataset\n",
     "First we initialize the dataset:"
@@ -207,7 +237,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "source": [
     "We now fill a array with all parameters. We only need few samples, we take them from the training set. \n",
     "We take samples 2 and 5, representing respectively a '4' and a '2'"
@@ -235,7 +269,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "source": [
     "Let us visualize our two patterns:"
    ]
@@ -244,7 +282,10 @@
    "cell_type": "code",
    "execution_count": 6,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "run_control": {
+     "marked": false
+    }
    },
    "outputs": [
     {
@@ -267,7 +308,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "source": [
     "#### The learning \n",
     "\n",
@@ -301,7 +346,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "source": [
     "Here is a visualization of the resulting matrix of weights:"
    ]
@@ -336,7 +385,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "source": [
     "#### The real simulation, iterating the timesteps\n",
     "\n",
@@ -621,7 +674,11 @@
   },
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "run_control": {
+     "marked": false
+    }
+   },
    "source": [
     "<br><br><br><br><br><br><br><br><br><br><br><br><br><br>\n",
     "Next cell is just for styling"
@@ -629,11 +686,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 50,
    "metadata": {
+    "code_folding": [],
     "collapsed": false,
     "run_control": {
-     "marked": false
+     "marked": true
     }
    },
    "outputs": [
@@ -642,6 +700,8 @@
       "text/html": [
        "<style>\n",
        "/* PRINT */\n",
+       "\n",
+       "div.MathJax_Display {padding: 40px}\n",
        "\n",
        "/* FONT_CODE */\n",
        ".input_area pre { font-size:12px; }\n",
@@ -781,13 +841,16 @@
        ".input_area .cm-s-ipython span.cm-string { color: #FFA0A0 } \n",
        ".input_area .cm-s-ipython span.cm-string-2 { color: #FFA0A0 } \n",
        "\n",
-       "</style>\n"
+       "</style>\n",
+       "\n",
+       "\n",
+       "\n"
       ],
       "text/plain": [
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
