working on feedforward

--- a/course/hopfield.ipynb
+++ b/course/hopfield.ipynb
@@ -686,7 +686,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 55,
    "metadata": {
     "code_folding": [],
     "collapsed": false,
@@ -702,7 +702,7 @@
        "/* PRINT */\n",
        "\n",
        "div.MathJax_Display {padding: 40px}\n",
-       ".input_area  { padding:20px; }\n",
+       "div.input_area  { padding:20px; }\n",
        "\n",
        "/* FONT_CODE */\n",
        ".input_area pre { font-size:12px; }\n",
@@ -851,7 +851,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 55,
      "metadata": {},
      "output_type": "execute_result"
     }
