working on feedforward

--- a/course/feedforward.ipynb
+++ b/course/feedforward.ipynb
@@ -9,6 +9,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
    "execution_count": 2,
    "metadata": {
     "collapsed": true,
@@ -180,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {
     "collapsed": false,
     "run_control": {
@@ -195,6 +204,8 @@
        "/* PRINT */\n",
        "\n",
        "div.MathJax_Display {padding: 40px}\n",
+       "div.input_area  { padding:10px; }\n",
+       "div.input_area>div.highlight  { padding:10px; }\n",
        "\n",
        "/* FONT_CODE */\n",
        ".input_area pre { font-size:12px; }\n",
@@ -343,7 +354,7 @@
        "<IPython.core.display.HTML object>"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
